test/cgip/PP/error/inheritance/rep/reperr-29.vdm
-- This file has been automatically updated wrt. VDM++ Lang.Adjust, 1th iteration
-- This file has been automatically updated wrt. VDM++ Lang.Adjust, 1th iteration


--  B - C - E
--    \   /
--      D
--
-- A
class B

end B


class C is subclass of B

values
  v = 'c'

end C

class D is subclass of B

values
public  v = 'd'

end D

class E is subclass of C, D

operations

public   m: () ==> char  
   m () ==
    return v;

end E

class A

operations 
  public Test : () ==> char  
  Test () ==
        new E().m()

end A














